# customer-churn

./: .gitignore  main.py  pyproject.toml
data/processed/: X_test.csv  X_train.csv  y_test.csv  y_train.csv
notebooks/: 01_eda.ipynb  02_preprocessing.ipynb
